--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@
 button{
       background-color:#4E47FF;
       color: white;
-      width: 100px;
-      height: 40px;
+      width: 120px;
+      height: 30px;
       text-align: center;
       border-radius: 10px;
+      padding: 0px;
 }
 .banner-main{
     text-align: center;
@@ -33,3 +34,18 @@ header{
      background-position: center; /* Centers the image */
     
     }
+.action-area{
+    display: flex;
+    justify-content: space-between;
+    margin: 70px 160px 30px 130px;
+}
+img{
+    width:350px;
+    height:250px;
+    border-radius: 20px;
+}
+#action-text{      
+    color:gray;
+  text-shadow: 2px 2px 4px;
+}
+    
