--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     align-items: center;
      font-family:Arial, Helvetica, sans-serif;
      font-weight: bold;
-     color: #4E47FF;;
+     color: #4E47FF;
 }
 button{
       background-color:#4E47FF;
@@ -37,7 +37,7 @@ header{
 .action-area{
     display: flex;
     justify-content: space-between;
-    margin: 70px 160px 30px 130px;
+    margin: 70px 120px 30px 130px;
 }
 img{
     width:350px;
@@ -47,5 +47,49 @@ img{
 #action-text{      
     color:gray;
   text-shadow: 2px 2px 4px;
+}
+.main-p-container{
+    width: 1100px;
+    height: 260px;
+    background-color: #deddf3;
+    margin: 80px auto;
+    border-radius: 15px;
+    
+}
+.productive-container{
+    display: flex;
+    justify-content:space-evenly;
+    height: 110px;
+    /*background-color: rgb(172, 192, 209);*/
+     width: 900px;
+    margin: 20px auto; 
+     position: relative;   
+    top: 50px;
+    right: 80px;
+    left: 20px;
+    
+}
+#productive-title{
+    font-size: 35px;
+    text-align: center;
+    width: 900px;
+    height: 40px;
+    margin: 10px auto ; 
+   /* background-color: aquamarine;*/
+    position: relative;   
+    top: 50px;
+    right: 80px;
+    left: 10px;
+}
+.p-user{
+     font-size: 65px;
+     padding: 0px;
+     margin: 0px;
+     color: #4E47FF;
+
+}
+.p-footer{
+    color: #272727;
+    margin-top: 0%;
 }
     
