--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .navbar{
     display: flex;
     margin: 5px 130px;
@@ -38,6 +39,7 @@ header{
     display: flex;
     justify-content: space-between;
     margin: 70px 120px 30px 130px;
+     background-color: #f8f8fa;
 }
 img{
     width:350px;
@@ -92,4 +94,43 @@ img{
     color: #272727;
     margin-top: 0%;
 }
+.form-container{
+    display: flex;
+    gap: 150px;
+    width: 1100px;
+    height: 300px;
+    padding: 60px 0px;
+    background-color:#f8f8fa;
+    align-items: center;    /* Vertical centering */
+    justify-content: center; /* Horizontal centering */
+    position: relative;
+    left: 120px;
     
+}
+.form-title-container{
+    font-size: 30px;
+    position: relative;
+    left: -10px;
+}
+input[type=text]{
+    width: 100%;
+    padding: 10px 5px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    
+}
+#submit{
+   width: 100%;
+    padding: 10px 5px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #4E47FF;
+    color: white;
+
+    
+}
+#text-area{
+    border-radius: 5px; 
+    padding: 10px 5px;
+}
+  
