--- a/style.css
+++ b/style.css
@@ -1,136 +1,258 @@
 
-.navbar{
-    display: flex;
-    margin: 5px 130px;
-    /*background-color: #f0f1ed;*/
-    justify-content: space-between;
-    align-items: center;
-     font-family:Arial, Helvetica, sans-serif;
-     font-weight: bold;
-     color: #4E47FF;
+
+
+.navbar {
+  display: flex;
+  margin: 5px 130px;
+  /*background-color: #f0f1ed;*/
+  justify-content: space-between;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  color: #4e47ff;
 }
-button{
-      background-color:#4E47FF;
-      color: white;
-      width: 120px;
-      height: 30px;
-      text-align: center;
-      border-radius: 10px;
-      padding: 0px;
+button {
+  background-color: #4e47ff;
+  color: white;
+  width: 120px;
+  height: 30px;
+  text-align: center;
+  border-radius: 10px;
+  padding: 0px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition */
 }
-.banner-main{
-    text-align: center;
-    margin: 95px 50px;
+
+button:hover {
+  background-color: #9c9bb3;
 }
-#b-heading{
-    color: #252432;
-    margin-bottom: 30px;
+.banner-main {
+  text-align: center;
+  margin: 95px 50px;
 }
-header{
-    width: auto;
-    height: 400px;
-     background-image: url('Assets/Hero-bg.png'); /* Replace with your image path */
-     background-size: cover; /* Ensures the image covers the entire area */
-     background-repeat: no-repeat; /* Prevents tiling */
-     background-position: center; /* Centers the image */
-    
-    }
-.action-area{
-    display: flex;
-    justify-content: space-between;
-    margin: 70px 120px 30px 130px;
-     background-color: #f8f8fa;
+#b-heading {
+  color: #252432;
+  margin-bottom: 30px;
 }
-img{
-    width:350px;
-    height:250px;
-    border-radius: 20px;
+header {
+  width: auto;
+  height: 400px;
+  background-image: url("Assets/Hero-bg.png"); /* Replace with your image path */
+  background-size: cover; /* Ensures the image covers the entire area */
+  background-repeat: no-repeat; /* Prevents tiling */
+  background-position: center; /* Centers the image */
 }
-#action-text{      
-    color:gray;
+.action-area {
+  display: flex;
+  justify-content: space-between;
+  margin: 70px 120px 30px 130px;
+  background-color: #f8f8fa;
+}
+img {
+  width: 350px;
+  height: 250px;
+  border-radius: 20px;
+}
+#action-text {
+  color: gray;
   text-shadow: 2px 2px 4px;
 }
-.main-p-container{
+.main-p-container {
+  width: 1100px;
+  height: 260px;
+  background-color: #deddf3;
+  margin: 80px auto;
+  border-radius: 15px;
+}
+.productive-container {
+  display: flex;
+  justify-content: space-evenly;
+  height: 110px;
+  /*background-color: rgb(172, 192, 209);*/
+  width: 900px;
+  margin: 20px auto;
+  position: relative;
+  top: 50px;
+  right: 80px;
+  left: 20px;
+}
+#productive-title {
+  font-size: 35px;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  text-align: center;
+  width: 900px;
+  height: 40px;
+  margin: 10px auto;
+  /* background-color: aquamarine;*/
+  position: relative;
+  top: 50px;
+  right: 80px;
+  left: 10px;
+}
+.p-user {
+  font-size: 65px;
+  padding: 0px;
+  margin: 0px;
+  color: #4e47ff;
+}
+.p-footer {
+  color: #272727;
+  margin-top: 0%;
+}
+.form-container {
+  display: flex;
+  gap: 150px;
+  width: 1100px;
+  height: 300px;
+  padding: 60px 0px;
+  background-color: #f8f8fa;
+  align-items: center; /* Vertical centering */
+  justify-content: center; /* Horizontal centering */
+  position: relative;
+  left: 120px;
+}
+.form-title-container {
+  font-size: 30px;
+  position: relative;
+  left: -10px;
+}
+input[type="text"] {
+  width: 100%;
+  padding: 10px 5px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+#submit {
+  width: 100%;
+  padding: 10px 5px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  background-color: #4e47ff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+#submit:hover {
+  background-color: #9c9bb3;
+}
+
+#text-area {
+  border-radius: 5px;
+  width: 100%;
+  padding: 10px 5px;
+  box-sizing: border-box;
+}
+
+.footer-logo {
+  font-size: 60px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #4e47ff;
+  text-align: center; /* Horizontal centering */
+  width: 1170px;
+  margin-top: 70px;
+  margin-bottom: 0%;
+}
+.footer-para {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #8987a1;
+  text-align: center; /* Horizontal centering */
+  width: 1170px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  justify-content: center; /* Horizontal centering */
+  width: 1170px;
+  gap: 20px;
+  padding: 5px auto;
+  position: relative;
+  right: 20px;
+}
+li a {
+  text-decoration: none;
+  color: #8987a1;
+}
+.icon-img-star {
+  width: 20px; /* Set the width of the icon */
+  height: 20px; /* Set the height of the icon */
+  background-image: url("/Assets/icon-star\ -\ Copy.png"); /* Path to your PNG file */
+  background-size: contain; /* Ensure the image fits within the element */
+ re
+  background-position: center; /* Center the image */
+}
+.review-container{
+    display: flex;
+    gap: 20px;
     width: 1100px;
-    height: 260px;
+    position: relative;
+    margin-bottom: 70px;
+    left: 118px;
+     
+    
+}
+.review-container-section{
+    width: 294px;
+    height: 160px;
     background-color: #deddf3;
-    margin: 80px auto;
-    border-radius: 15px;
-    
+    border-radius: 10px;
+    padding: 30px;
 }
-.productive-container{
+.review-star-icon{
     display: flex;
-    justify-content:space-evenly;
-    height: 110px;
-    /*background-color: rgb(172, 192, 209);*/
-     width: 900px;
-    margin: 20px auto; 
-     position: relative;   
-    top: 50px;
-    right: 80px;
-    left: 20px;
+    margin-bottom: 40px;
+}
+.review-pra{
+    width: 280px;
+    height: 80px;
+    margin-top: 10px;
     
 }
-#productive-title{
-    font-size: 35px;
-    text-align: center;
-    width: 900px;
+.review-icon-img{
+     width: 40px; /* Set the width of the icon */
     height: 40px;
-    margin: 10px auto ; 
-   /* background-color: aquamarine;*/
-    position: relative;   
-    top: 50px;
-    right: 80px;
-    left: 10px;
-}
-.p-user{
-     font-size: 65px;
-     padding: 0px;
-     margin: 0px;
-     color: #4E47FF;
+    background-image: url("/Assets/avatar.png");
+     background-size: contain;
 
 }
-.p-footer{
-    color: #272727;
-    margin-top: 0%;
-}
-.form-container{
+.review-img{
     display: flex;
-    gap: 150px;
-    width: 1100px;
-    height: 300px;
-    padding: 60px 0px;
-    background-color:#f8f8fa;
-    align-items: center;    /* Vertical centering */
-    justify-content: center; /* Horizontal centering */
-    position: relative;
-    left: 120px;
+    gap: 8px;
     
 }
-.form-title-container{
-    font-size: 30px;
-    position: relative;
-    left: -10px;
-}
-input[type=text]{
-    width: 100%;
-    padding: 10px 5px;
-    box-sizing: border-box;
-    border-radius: 5px;
+.review-footer-pra{
+    line-height: 0%;
+      
     
 }
-#submit{
-   width: 100%;
-    padding: 10px 5px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    background-color: #4E47FF;
-    color: white;
+.review-img-heading{
+    
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+    line-height: 0%;
+}
 
-    
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+h2 {
+ 
 }
-#text-area{
-    border-radius: 5px; 
-    padding: 10px 5px;
+.review-title{
+   font-size: 35px;
+   font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  text-align: center;
+  width: 1100px;
+  height: 50px;
+  margin: 50px auto;
+   /*background-color: rgb(127, 187, 167);*/
 }
-  
